# minimal-web-scraper

./: .flake8  .gitignore  .readthedocs.yaml  CHANGELOG.rst  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: tests.yml
docs/source/: about.rst  conf.py  example.rst  index.rst  installation.rst  license.rst
docs/source/_static/css/: custom.css
docs/source/_templates/autoapi/: index.rst
docs/source/_templates/autoapi/python/: module.rst
docs/source/how-to/: create_parser.rst  import_parser.rst  index.rst  scope_url.rst
docs/source/references/: index.rst  scope_url.rst  scope_urls.rst
docs/source/tutorials/: index.rst  installation.rst  minimal_web_scraper.rst
example/: example.py  parser_example.py
src/minimal_web_scraper/: __init__.py  main.py
src/minimal_web_scraper/parsers/: __init__.py  base.py  exceptions.py  utils.py
tests/: test_parsers.py  test_scraper.py
