[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "minimal-web-scraper"
version = "0.0.0"
description = "A small library to scrape web pages"
authors = ["gamma_120 <gamma_120+github@simplelogin.com>"]

readme = "README.md"
license = "MIT"

homepage = "https://github.com/Gamma120/minimal-web-scraper"
repository = "https://github.com/Gamma120/minimal-web-scraper"

keywords = ["web scraper"]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
]

[tool.poetry.dependencies]
python = "^3.10"

requests = "^2.20"

[tool.poetry.group.test.dependencies]
pytest = ">=7.2"
pytest-cov = ">=4.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = ">=6.0.0"
flake8-bugbear = ">=23.1.20"
black = {version = ">=23.1a1", allow-prereleases = true}
mypy = ">=0.991"
tox = ">=4.4.3"

[tool.poetry.group.docs.dependencies]
sphinx = "^6.1.3"
furo = "^2022.12.7"
sphinx-tabs = "^3.4.1"
sphinx-copybutton = "^0.5.1"
sphinx-autoapi = "^2.0.1"

[tool.poetry.group.typing.dependencies]
types-beautifulsoup4 = ">=4.11.6.4"
types-requests = ">=2.28.11.8"

[tool.poetry.group.example]
optional = true

[tool.poetry.group.example.dependencies]
pandas = ">=1.5.3"
bs4 = ">=0.0.1"

[tool.mypy]
packages = "src.minimal_web_scraper"
# ignore_missing_import = true

[tool.pytest.ini_options]
minversion = "7.2"
addopts = [
    "--import-mode=importlib",
    "--cov=minimal_web_scraper",
    "--cov=tests",
    "--cov-report=term-missing",
    # "--cov-fail-under=95",
]
pythonpath = [
    "src"
]
testpaths = [
    "tests",
]
